# FusionCpp

./: .gitignore  CMakeLists.txt  INTEGRATION.md  README.md  camera.h  imgui.ini  magnetic_field.h  main.cpp  particle.cpp  particle.frag  particle.h  plasma_physics.h  ray_tracing.cpp  tokamak_geometry.h  tokamak_raytrace.comp
build-3d/: imgui.ini  particle.frag  tokamak_raytrace.comp
build-root/: .ninja_deps  .ninja_log  build.ninja
